--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,6 +41,30 @@ body {
   color: grey;
 }
 
-.horizontal-card {
-  flex-direction: row;
+.card-img-left {
+  background-image: url('https://d.newsweek.com/en/full/1654970/mnuchin.webp?w=790&f=e084f7792793750e01514706215dd25a');
+  background-size: cover;
+  background-position: center center;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.card-body-right {
+  padding-left: 1rem;
+}
+
+.card-horizontal {
+  display: grid;
+  grid-template-columns: 20% 80%;
+}
+
+.card-custom {
+  display: grid;
+  grid-template-rows: 60% 40%;
+}
+
+.debate {
+  border-bottom: 2px solid grey;
+  display: block;
+  padding-bottom: 0.3rem;
 }
