Set media queries template and improved layout for tablet version.

--- a/scss/_mqueries.scss
+++ b/scss/_mqueries.scss
@@ -1,47 +1,60 @@
-@media screen and (min-width: 1200px) {
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+/* Styles */
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen 
+and (min-width : 321px) {
+/* Styles */
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen 
+and (max-width : 320px) {
+/* Styles */
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+/* Styles */
+}
+
+/* iPads (landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+/* Styles */
+}
+
+/* iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
   
 }
 
-@media screen and (min-width: 1000px) {
-  .burger-menu,
-  .user-icon {
-    display: none;      
-  }
+/* Desktops and laptops ----------- */
+@media only screen 
+and (min-width : 1224px) {
+/* Styles */
 }
 
-@media screen and (min-width: 768px) and (max-width: 999px) {
-  .bottom-nav,
-  .weather-date {
-    display: none;
-  }
+/* Large screens ----------- */
+@media only screen 
+and (min-width : 1824px) {
+
 }
 
-@media screen and (min-width: 300px) and (max-width: 767px) {
-  .bottom-nav,
-  .weather-date,
-  .trending {
-    display: none;
-  }
-
-  .red-nav {
-    display: flex;
-    height: 30px;
-  }
-
-  .logo-link {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    width: 40%;
-  }
-
-  .login-subscribe {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  #newsweek-logo {
-    width: 150px;
-    height: 60px;
-  }
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* Styles */
 }
