--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -10,10 +10,15 @@ $mobile-width: 300px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-y: hidden;
 }
 
 li {
   list-style-type: none;
+}
+
+.red-nav {
+  height: 20%;
 }
 
 .red-hover:hover {
