--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,9 +11,16 @@ body {
   font-family: $font-stack;
 }
 
+h4.card-title:hover,
+.card-body > h5:hover {
+  text-decoration: underline;
+  text-decoration-color: red;
+}
+
 .stories-grid {
   display: grid;
-  grid-template-areas: "featured-stories top-stories debate-stories";
+  grid-template-areas:
+    "featured-stories top-stories debate-stories";
 }
 
 .card-img-left {
@@ -31,8 +38,9 @@ body {
 
 .card-custom {
   display: grid;
-  grid-template-rows: 30% 70%;
-  grid-template-areas: "card-img-top" "card-body";
+  grid-template-areas:
+   "card-img-top"
+   "card-body";
 }
 
 .card-custom > div > p {
@@ -51,14 +59,55 @@ body {
 }
 
 .hover-red:hover {
-  text-decoration: underline;
-  text-decoration-color: red;
-}
-
-.card-text {
-  @include font-size(0.9rem);
+  color: red;
 }
 
 .card-text-ms {
   font-size: 0.4rem;
+}
+
+.vs-container {
+  z-index: 2;
+}
+
+.vs-container::before {
+  margin-bottom: 2.5px;
+  position: absolute;
+  content: " ";
+  display: block;
+  background-color: var(--gray-one);
+}
+
+.vs-container::after {
+  margin-bottom: 2.5px;
+  position: absolute;
+  content: " ";
+  display: block;
+  background-color: var(--gray-one);
+}
+
+.last-debate {
+  border-width: 8px !important;
+}
+
+.bg-image-newsletter {
+  background-image: url('https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5');
+  background-size: cover;
+  background-position: center;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.trademark {
+  align-self: flex-end;
+  font-size: 0.8rem;
+}
+
+.footer-icons > li > a {
+  font-size: 1.4rem;
+  align-self: flex-end;
+}
+
+.bottom-footer-links > ul > li > a {
+  font-size: 0.8rem;
 }
