--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'config';
 @import 'navbar';
+@import 'mqueries';
 
 .main-container {
   width: 100%;
@@ -17,18 +18,20 @@ h4.card-title:hover,
   text-decoration-color: red;
 }
 
-.stories-grid {
-  display: grid;
-  grid-template-areas:
-    "featured-stories top-stories debate-stories";
-}
-
 .card-img-left {
   background-image: url('https://d.newsweek.com/en/full/1654970/mnuchin.webp?w=790&f=e084f7792793750e01514706215dd25a');
   background-size: cover;
   background-position: center center;
   max-width: 100%;
   max-height: 100%;
+}
+
+.card-title {
+  font-size: 1rem;
+
+  span {
+    display: inline-block;
+  }
 }
 
 .card-horizontal {
@@ -39,8 +42,8 @@ h4.card-title:hover,
 .card-custom {
   display: grid;
   grid-template-areas:
-   "card-img-top"
-   "card-body";
+    "card-img-top"
+    "card-body";
 }
 
 .card-custom > div > p {
