--- a/scss/_mqueries.scss
+++ b/scss/_mqueries.scss
@@ -3,8 +3,7 @@
  */
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-}
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {}
 
 /* Smartphones (landscape) ----------- */
 @media only screen 
